Documentation edits made through Mintlify web editor

--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -9,7 +9,7 @@ Imagine the ability to execute scripts directly from a script library without ev
 
 ## How does Kyvorn Execute work?
 
-### Web Interface/Client
+### Web Interface\/Client
 
 The web interface will create an executor token under the user's authorization, and then that will be saved to be "paired" to an executor.
 
