Documentation edits made through Mintlify web editor

--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -25,7 +25,7 @@ Once in a paired state, the executor will begin making requests checking for pen
 
 In the future we will find a more efficent way of doing this that takes up less bandwith possibly (since this implementation is maybe 100+/- KB).
 
-## \[NEW\] Kyvorn Execute Client Code
+## [NEW] Kyvorn Execute Client Code
 
 <Info>
   From now on, "client" is used interchangeably with the Web interface and your Executor's user interface
