Documentation edits made through Mintlify web editor

--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -226,6 +226,6 @@ This URL is used by the Execute button on the Kyvorn website. You can also execu
 
 ## Branding
 
-**Congratulations\!** You just included Kyvorn inside of your application\! Now, you are able to include the special Uses Kyvorn Execute badge onto your executor's website or Credits/Settings page. [You can download it on our main page here.](https://kyvorn.peretas.tech/#branding)
+**Congratulations!** You just included Kyvorn inside of your application! Now, you are able to include the special Uses Kyvorn Execute badge onto your executor's website or Credits/Settings page. [You can download it on our main page here.](https://kyvorn.peretas.tech/#branding)
 
 ![Kyvorn Logo](/supportskyvornexecute.png)
