--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -42,12 +42,7 @@ Integrate this code with your client in order to have Kyvorn Execute always enab
 ```javascript execute.js
 /*
 
-  _  __                             _____                     _       
- | |/ /   ___   _____  _ __ _ __   | ____|_  _____  ___ _   _| |_ ___ 
- | ' / | | \ \ / / _ \| '__| '_ \  |  _| \ \/ / _ \/ __| | | | __/ _ \
- | . \ |_| |\ V / (_) | |  | | | | | |___ >  <  __/ (__| |_| | ||  __/
- |_|\_\__, | \_/ \___/|_|  |_| |_| |_____/_/\_\___|\___|\__,_|\__\___|
-      |___/                                                           
+Kyvorn Execute
 
 Developed by the iBallexus Team
 © 2025 Peretas Technologies
