Documentation edits made through Mintlify web editor

--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Kyvorn Execute"
+sidebarTitle: "Kyvorn Execute"
 description: "Implement Kyvorn Execute into your executor!"
 ---
 
@@ -39,7 +40,7 @@ Integrate this code with your client in order to have Kyvorn Execute always enab
 
 <CodeGroup>
 
-```javascript execute.js
+```javascript
 /*
 
 Kyvorn Execute
