Documentation edits made through Mintlify web editor

--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -227,13 +227,13 @@ const DEFAULT_EXECUTOR_NAME = "SkiddieScript";
 const SCRIPT_CHECK_WAIT_DURATION = 5000;
 ```
 
-**API_SERVER_URL** defines the API URL the executor uses for Kyvorn Execute. \*\*DEFAULT_EXECUTOR_NAME \*\*defines the name of your executor and **SCRIPT_CHECK_WAIT_DURATION** defines the wait to check for new pending scripts in milliseconds.
+**API_SERVER_URL** defines the API URL the executor uses for Kyvorn Execute. **DEFAULT_EXECUTOR_NAME** defines the name of your executor and **SCRIPT_CHECK_WAIT_DURATION** defines the wait to check for new pending scripts in milliseconds.
 
 ### Setting up the execute function
 
 You'll need to find the `function execute(script)` to setup your executor's execute function. You'll need to add your custom logic that will execute the script, which is included as the variable "script".
 
-In this example, I use the execute function from Sight which will execute the script in MacSploit. You can view the raw source code on GitHub: <https://github.com/peretashacking/sight/blob/main/src/main.js> line 124:1.
+In this example, I use the execute function from Sight which will execute the script in MacSploit. You can view the raw source code on GitHub: [https://github.com/peretashacking/sight/blob/main/src/main.js](https://github.com/peretashacking/sight/blob/main/src/main.js) line 124:1.
 
 ### Executing from your web browser
 
