Documentation edits made through Mintlify web editor

--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -233,7 +233,7 @@ const SCRIPT_CHECK_WAIT_DURATION = 5000;
 
 You'll need to find the `function execute(script)` to setup your executor's execute function. You'll need to add your custom logic that will execute the script, which is included as the variable "script".
 
-In this example, I use the execute function from Sight which will execute the script in MacSploit. You can view the raw source code on GitHub: [https://github.com/peretashacking/sight/blob/main/src/main.js](https://github.com/peretashacking/sight/blob/main/src/main.js) line 124:1.
+In this example, I use the execute function from Sight which will execute the script in MacSploit. You can view the raw source code on GitHub: [peretashacking/sight/main -> ~/src/main.js 124:1](https://github.com/peretashacking/sight/blob/cff4aa515b683daaba7fa82db47992eb79ffe9dd/src/main.js#L124)
 
 ### Executing from your web browser
 
